# private-ai-architect

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  README_private_ai_infra_blueprint.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md  integration_request.md
.github/workflows/: ci.yml
configs/examples/: audit-policy.example.yaml  data-sources.example.yaml  model-config.example.yaml  rag-config.example.yaml  rbac.example.yaml
docs/: architecture.md  beginner-guide.md  blueprint-schema.md  cli-reference.md  configuration-reference.md  deployment-modes.md  developer-workflow.md  dry-run-mode.md  github-growth-strategy.md  guided-architect-workflow.md  hardware-and-runtime-options.md  knowledge-workspace-and-memory-optimization.md  launch-checklist.md  local-rag-mvp.md  mvp-scope.md  open-source-mission.md  project-investigation.md  rag-quality-v0.2.1.md  roadmap.md  security-principles.md  stakeholder-workflow.md  starting-rag-from-scratch.md  threat-model.md  version-test-guide.md  vision.md
examples/: README.md
examples/architect/: cloud-migration-answers.json  local-rag-answers.json  private-gpu-answers.json
examples/evaluation/: local-rag-cases.json
examples/sample-company-docs/: README.md
examples/sample-company-docs/engineering/: api-guidelines.md
examples/sample-company-docs/policies/: remote-work-policy.md
examples/sample-cyber-logs/: README.md
src/private_ai_infra/: __init__.py  architect.py  blueprint.py  cli.py  doctor.py  evaluation.py  generator.py  indexer.py  models.py  ollama.py  retrieval.py  validator.py
tests/: test_architect.py  test_cli.py  test_doctor.py  test_evaluation.py  test_generator_validator.py  test_indexer_retrieval.py  test_models.py  test_ollama.py
