[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "private-ai-infra-blueprint"
version = "0.2.0"
description = "Open-source guided architect for local RAG, private GPU infrastructure, and staged AI migration."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Private AI Infrastructure Blueprint contributors" }
]
keywords = [
  "private-ai",
  "rag",
  "local-ai",
  "llmops",
  "ai-infrastructure",
  "dgx",
  "dgx-spark",
  "cloud-migration",
  "qdrant",
  "ollama"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Systems Administration"
]

[project.urls]
Homepage = "https://github.com/samasaikumarreddy/private-ai-architect"
Documentation = "https://github.com/samasaikumarreddy/private-ai-architect/tree/main/docs"
Issues = "https://github.com/samasaikumarreddy/private-ai-architect/issues"

[project.scripts]
private-ai = "private_ai_infra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
